<resources>
    <string name="app_name">CodingAssignment_</string>
    <string name="title_home">Unsplash</string>
    <string name="search_hint">Search  e.g \"Pot\"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filters_title">Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="color">Color</string>
    <string name="relevance">Relevance</string>
    <string name="newest">Newest</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="any_color">Any Color</string>
    <string name="black_white">Black and White</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="error_msg">Uh-oh! Something went wrong. Please try again</string>


</resources>